[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oldie-goldie"
version = "0.5.7"
description = "Oldie Goldie — a peer-to-peer encrypted chat with tunnel and token-based access."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Venu kotamraju", email = "kotamraju.venugopal@gmail.com" }
]
maintainers = [
  { name = "Venu kotamraju", email = "kotamraju.venugopal@gmail.com" }
]

keywords = ["chat", "encryption", "tunnel", "websocket", "secure"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]

dependencies = [
    "cffi==1.17.1",
    "cryptography==45.0.4",
    "prompt_toolkit==3.0.51",
    "pycparser==2.22",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "black", "build", "twine", "wheel", "setuptools", "bumpver"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.20",
    "mkdocs-awesome-pages-plugin>=2.9.2",
]


[project.urls]
Homepage = "https://github.com/venukotamraju/Oldie-Goldie"
Repository = "https://github.com/venukotamraju/Oldie-Goldie"
Issues = "https://github.com/venukotamraju/Oldie-Goldie/issues"
Changelog = "https://github.com/venukotamraju/Oldie-Goldie/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["oldie_goldie"]

# 💡 Add command-line entry points
[project.scripts]
og-server = "server.server:cli"
og-client = "client.chat:cli"

# Automated Sematic Versioning Helper
[tool.bumpver]
current_version = "0.5.7"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "🔖 Bump version {old_version} → {new_version}"
tag_message = "v{new_version}"
tag_scope = "global"
push = false  # change to true if you want it to push automatically

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']

