[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oldie-goldie"
version = "0.5.10"
description = "Oldie Goldie — a peer-to-peer encrypted chat with tunnel and token-based access."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Venu kotamraju", email = "kotamraju.venugopal@gmail.com" }
]
maintainers = [
  { name = "Venu kotamraju", email = "kotamraju.venugopal@gmail.com" }
]

keywords = ["chat", "encryption", "tunnel", "websocket", "secure"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
]

dependencies = [
    "cryptography>=42,<50 ; sys_platform != 'emscripten'",
    "cffi>=1.15,<2 ; platform_machine != 'wasm32'",
    "prompt_toolkit>=3.0.51",
    "pycparser>=2.22",
    "wcwidth>=0.2.13",
    "websockets>=15,<16",
]

[project.optional-dependencies]
dev = ["pytest", "black", "build", "twine", "wheel", "setuptools", "bumpver"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.20",
    "mkdocs-awesome-pages-plugin>=2.9.2",
]


[project.urls]
Homepage = "https://github.com/venukotamraju/Oldie-Goldie"
Repository = "https://github.com/venukotamraju/Oldie-Goldie"
Issues = "https://github.com/venukotamraju/Oldie-Goldie/issues"
Changelog = "https://github.com/venukotamraju/Oldie-Goldie/blob/main/CHANGELOG.md"
Documentation = "https://venukotamraju.github.io/Oldie-Goldie"

[tool.setuptools.packages.find]
where = ["oldie_goldie"]

# 💡 Add command-line entry points
[project.scripts]
og-server = "server.server:cli"
og-client = "client.chat:cli"

# Automated Sematic Versioning Helper
[tool.bumpver]
current_version = "0.5.10"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "🔖 Bump version {old_version} → {new_version}"
tag_message = "v{new_version}"
tag_scope = "global"
push = false  # change to true if you want it to push automatically

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']

